# kio-extras

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  DEBUG.howto  DESGIN  DESIGN  Makefile.am  README.md  config-runtime.h.cmake  configure.in.bot  configure.in.in  kio-extras.categories  metainfo.yaml
about/: CMakeLists.txt  Messages.sh  about.json  kio_about.cpp  kio_about.h
activities/: CMakeLists.txt  KioActivities.cpp  KioActivities.h  KioActivitiesApi.cpp  KioActivitiesApi.h  Messages.sh  activities.json  activities.protocol
activities/autotests/: ActivityBasicTest.cpp  CMakeLists.txt
activities/common/: specialvalues.h
activities/fileitemplugin/: CMakeLists.txt  FileItemLinkingPlugin.cpp  FileItemLinkingPlugin.h  FileItemLinkingPluginActionLoader.cpp  FileItemLinkingPluginActionLoader.h  FileItemLinkingPlugin_p.h  kactivitymanagerd_fileitem_linking_plugin.desktop  kactivitymanagerd_fileitem_linking_plugin.json
activities/utils/: d_ptr.h  d_ptr_implementation.h  qsqlquery_iterator.cpp  qsqlquery_iterator.h
afc/: CMakeLists.txt  Messages.sh  afc-network.desktop  afc.json  afcapp.cpp  afcapp.h  afcclient.cpp  afcclient.h  afcdevice.cpp  afcdevice.h  afcdiskusage.cpp  afcdiskusage.h  afcfile.cpp  afcfile.h  afcfilereader.cpp  afcfilereader.h  afcspringboard.cpp  afcspringboard.h  afcurl.cpp  afcurl.h  afcutils.cpp  afcutils.h  kio_afc.cpp  kio_afc.h  solid_afc.desktop
applications/: CMakeLists.txt  kio_applications.cpp
archive/: CMakeLists.txt  KF5KioArchiveConfig.cmake.in  KioArchiveConfig.cmake.in  Messages.sh  ar.protocol  archive.json  kio_archive.cpp  kio_archive.h  kio_archive_debug.cpp  kio_archive_debug.h  kio_archivebase.cpp  kio_archivebase.h  sevenz.protocol  tar.protocol  zip.protocol
archive/autotests/: CMakeLists.txt  testkioarchive.cpp  testkioarchive.h
archive/tests/: CMakeLists.txt  testkioarchive.cpp  testkioarchive.h
audiocd/: Makefile.am  audiocd.cpp  audiocd.h  audiocd.protocol  cddb.cpp  cddb.h  configure.in.in
audiocd/kcmaudiocd/: Makefile.am  Makefile.in  audiocd.desktop  audiocdconfig.ui  kcmaudiocd.cpp  kcmaudiocd.h
bookmarks/: CMakeLists.txt  Messages.sh  bookmarks.json  bookmarks.protocol  kio_bookmarks.cpp  kio_bookmarks.css  kio_bookmarks.h  kio_bookmarks_html.cpp  kio_bookmarks_pixmap.cpp
cgi/: CMakeLists.txt  Makefile.am  README  cgi.cpp  cgi.h  cgi.protocol
cgi/kcmcgi/: CMakeLists.txt  Makefile.am  kcmcgi.cpp  kcmcgi.desktop  kcmcgi.h
cmdtoolsearch/: CMakeLists.txt  Messages.sh  cmdtool.cpp  cmdtool.h  cmdtool_manager.cpp  cmdtool_manager.h  cmdtoolsearch.json  config.h.cmake  kio_cmdtoolsearch.cpp  kio_cmdtoolsearch.h  kio_cmdtoolsearch_p.h
cmdtoolsearch/autotests/: CMakeLists.txt  cmdtooltest.cpp
cmdtoolsearch/tests/: CMakeLists.txt  cmdtool_main.cpp
cmdtoolsearch/tools/: default_file_name_search
csmb/: Makefile.am  corel_smb.cpp  corel_smb.h  smb.protocol
csmb/Libraries/: Makefile.am  acconfig.h  configure.in.in
desktop/: CMakeLists.txt  Home.desktop  desktop.protocol  desktopnotifier.cpp  desktopnotifier.desktop  desktopnotifier.h  directory.trash  kio_desktop.cpp  kio_desktop.h
desktop/tests/: CMakeLists.txt  kio_desktop_test.cpp
devices/: Makefile.am  configure.in.in  devices.desktop  devices.protocol  kio_devices.cc  mountwatcher  mountwatcher.desktop  system.protocol
devices/kdedmodule/: Makefile.am  disklist.cpp  disklist.h  disks.cpp  disks.h  mountwatcher.cpp  mountwatcher.desktop  mountwatcher.h
devices/kfile-plugin/: Makefile.am  kfile_device.desktop  kfiledeviceplugin.cpp  kfiledeviceplugin.h
devices/mimetypes/: Makefile.am  cdrom_mounted.desktop  cdrom_mounted_konqy.desktop  cdrom_unmounted.desktop  cdrom_unmounted_konqy.desktop  cdwriter_mounted.desktop  cdwriter_mounted_konqy.desktop  cdwriter_unmounted.desktop  cdwriter_unmounted_konqy.desktop  dvd_mounted.desktop  dvd_mounted_konqy.desktop  dvd_unmounted.desktop  dvd_unmounted_konqy.desktop  floppy5_mounted.desktop  floppy5_mounted_konqy.desktop  floppy5_unmounted.desktop  floppy5_unmounted_konqy.desktop  floppy_mounted.desktop  floppy_mounted_konqy.desktop  floppy_unmounted.desktop  floppy_unmounted_konqy.desktop  (+18 more)
filenamesearch/: CMakeLists.txt  Messages.sh  config.h.cmake  filenamesearch.json  kio-filenamesearch-grep  kio_filenamesearch.cpp  kio_filenamesearch.h  kio_filenamesearch_p.h
filter/: CMakeLists.txt  Makefile.am  bzip.protocol  bzip2.protocol  configure.in.in  filter.cc  filter.cpp  filter.h  filter.json  gzip.protocol  lzma.protocol  xz.protocol
finger/: CMakeLists.txt  Makefile.am  Messages.sh  finger.protocol  kio_finger.cpp  kio_finger.css  kio_finger.h  kio_finger.pl
fish/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Messages.sh  README  TODO  config-fish.h.cmake  configure.in.in  fish.cpp  fish.h  fish.json  fish.pl  fish.protocol  generate_fishcode.bat  generate_fishcode.py  generate_fishcode.sh
floppy/: CMakeLists.txt  Makefile.am  Messages.sh  floppy.protocol  kio_floppy.cpp  kio_floppy.h  program.cpp  program.h
gopher/: Makefile.am  gopher.cc  gopher.h  gopher.kdelnk
gzip/: Makefile.am  bzip.desktop  bzip.protocol  bzip2.desktop  bzip2.protocol  gzip.cc  gzip.desktop  gzip.h  gzip.protocol
help/: Makefile.am  checkXML.cpp  configure.in.in  help.desktop  kbuildsycoca.man.docbook  kio_help.cpp  kio_help.h  main.cpp  meinproc.cpp  xmlizer  xslt.cpp  xslt.h
home/: CMakeLists.txt  Makefile.am  Messages.sh  home.protocol  homeimpl.cpp  homeimpl.h  kio_home.cpp  kio_home.h  testhome.cpp  testhome.h
imap4/: .emacs-dirvars  Doxyfile  IMAPClient.cpp  IMAPClient.h  IMAPTest.cpp  Makefile.am  PATCHING  README  base64.cc  base64md5.cc  base64md5.h  imap4-ssl.protocol  imap4.cc  imap4.desktop  imap4.h  imap4.protocol  imapcommand.cc  imapcommand.h  imapinfo.cc  imapinfo.h  imaplist.cc  imaplist.h  imapparser.cc  imapparser.h  imaps.protocol  mailaddress.cc  mailaddress.h  mailheader.cc  mailheader.h  md5.cc  md5.h  mimehdrline.cc  mimehdrline.h  mimeheader.cc  mimeheader.h  mimeio.cc  mimeio.h  response.cc  rfcdecoder.cc  rfcdecoder.h  (+1 more)
(+4409 files in other folders)
